task-1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task1
spec:
  selector:
    matchLabels:
      app: task1
  template:
    metadata:
      labels:
        app: task1
    spec:
      containers:
      - name: nginx
        image: 1pooja1/task1  
        ports:
        - containerPort: 80
