task-1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task1-service
spec:
  selector:
    app: task1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
