task-1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task1-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: poojaghimire.com.np
    http:
      paths:
      - path: /usr/share/nginx/html
        pathType: Prefix
        backend:
          service:
            name: task1-service
            port:
              number: 80
